# libELF

./: .editorconfig  .gitignore  BUILDING.md  CMakeLists.txt  CODEGUIDE.md  CONTRIBUTING.md  README.md
ELF/: CMakeLists.txt  ELF.cpp  ELF.h
ELF/Headers/: ELFHeader.h  ELFIdent.h  ELFProgramHeader.h  ELFSectionHeader.h  ELFUtility.cpp  ELFUtility.h
ELFReader/: CMakeLists.txt  ELFReader.cpp  Main.cpp
Scripts/: Gen-WinProjects.bat
