cmake_minimum_required(VERSION 3.28)

project(libELF
	VERSION 1.0.0
	LANGUAGES CXX
)

# CONFIGS
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(LIBELF_TARGET_NAME ELF)
set(ELFREADER_TARGET_NAME ELFReader)

add_subdirectory(${LIBELF_TARGET_NAME})
add_subdirectory(${ELFREADER_TARGET_NAME})
